# luaOpenCV

./: CMakeLists.txt  README.md
src/: cv_bind_type_traits.hpp  manual_bind.cc  raw_bind.cc  raw_bind_generated.inc  raw_bind_generated.inc.full
